# py-chat

./: .gitignore  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 068042b3481a_refactor.py  15d9aa140343_create_relationship_between_user_chat_.py  1e020dfda03f_create_users_table.py  324b14564226_add_updated_at_column.py  6914a2053171_create_chat_table.py  6b90411d10e9_add_created_at_and_updated_at_columns.py  8bda8758ded9_typing_adjustment_in_the_chat_.py  998ea65fa230_create_message_table.py  bd04e7d9aaba_create_relationship_between_user_and_.py  d56f87dde8bb_create_friends_table.py
py_chat/: database.py  main.py
py_chat/api/: dependencies.py  websocket.py
py_chat/api/routes/: auth.py  chats.py  friends.py  users.py
py_chat/api/websocket/: websocket.py
py_chat/core/: config.py  database.py  logger.py  security.py
py_chat/main/routers/: friends.py  schemas.py  users.py
py_chat/main/server/: app.py
py_chat/models/: base.py  user.py
py_chat/models/repositories/: user.py
py_chat/schemas/: auth.py  chat.py  friend.py  message.py  schemas.py  user.py
py_chat/service/: chat.py  user.py
py_chat/service/websocket/: handlers.py  manager.py
scripts/: seeds.py
tests/: conftest.py  test_models.py
tests/dependencies/: test_decode_token.py  test_get_current_user.py  test_get_user_repository.py
tests/models/: test_chat_model.py  test_friend_model.py  test_message_model.py  test_user_model.py
tests/models/repositories/: test_user.py
tests/routers/: test_friends.py  test_users.py
tests/service/: test_user.py
(+1 files in other folders)
